--- a/PAM/Views/Account/Login.cshtml
+++ b/PAM/Views/Account/Login.cshtml
@@ -11,10 +11,10 @@
       <span class="login-title"> Probation Access Manager </span>
       <form asp-action="Login" method="post">
         <div class="input-container">
-          <input name="username" class="input-edit" placeholder="Username" data-val-required="Username is required." />
+          <input name="username" class="input-edit" placeholder="Username" data-val-required="Username is required." required />
         </div>
         <div class="input-container">
-          <input name="password" class="input-edit" type="password" data-val-required="Password is required." placeholder="Password" />
+          <input name="password" class="input-edit" type="password" data-val-required="Password is required." placeholder="Password" required />
         </div>
         <button type="submit" class="btn btn-info btn-block" value="submit" style="margin-top:40px;"> Login </button>
         @if (Model != null)
